--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,22 +1,22 @@
 /* --- Global Styles --- */
 
 * {
-  font-family: 'SF Pro Text';
+  font-family: "Mac's Minecraft";
   min-height: 0;
   padding: 0;
-  color: #caa88b;
+  color: rgb(202, 168, 139);
 }
 
 #waybar {
-  background: transparent;
+  background: rgba(52, 50, 50, 0);
 }
 
 #workspaces,
 #clock,
 #bluetooth,
 #network {
-  padding: 2 0;
-  margin-top: 0;
+  padding: 0 0;
+  margin-top: 8;
 }
 
 #workspaces,
@@ -29,12 +29,13 @@
 /* --- LEFT --- */
 
 #workspaces {
+  margin-left: 18;
   font-size: 14px;
   min-width: 0;
 }
 
 #workspaces button {
-  margin-right: 10px;
+  margin-right: 8px;
 }
 
 
@@ -45,7 +46,7 @@
   /* font-family: "Pokemon Classic"; */
   font-family: "Mac's Minecraft";
   font-size: 13;
-  font-weight: 400;
+  font-weight: 600;
 }
 
 
@@ -53,8 +54,8 @@
 
 #bluetooth,
 #network {
-  padding: 0 8px;
-  font-size: 16px;
+  padding-left: 12;
+  font-size: 18px;
 }
 
 #network.disconnected {
@@ -62,7 +63,8 @@
 }
 
 #bluetooth {
-  padding-right: 2;
+  font-size: 20px;
+  margin-right: 22;
   color: gray;
 }
 
@@ -76,12 +78,13 @@
 
 /* --- Tooltip Styles --- */
 tooltip {
-  background-color: #1a1b26;
-  color: #dddddd;
-  padding: 5px 12px;
+  background-color: #111111;
   margin: 5px 0px;
-  border-radius: 6px;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  font-size: 12px;
+  border-radius: 0px;
+  border: 2px solid rgba(202, 168, 139, 0.5);
+}
+
+tooltip label {
+  padding: 5px;
+  font-size: 13px;
 }
