--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,7 +1,8 @@
 /* --- Global Styles --- */
 
 * {
-  font-family: "Mac's Minecraft";
+  /* font-family: "Mac's Minecraft"; */
+  font-family: "Terminus";
   min-height: 0;
   padding: 0;
 }
@@ -49,8 +50,8 @@
 #clock {
   padding: 0 0.7rem;
   /* font-family: "Pokemon Classic"; */
-  font-family: "Mac's Minecraft";
-  font-size: 13;
+  /* font-family: "Mac's Minecraft"; */
+  font-size: 20;
   font-weight: 600;
 }
 
@@ -90,6 +91,7 @@ tooltip {
 }
 
 tooltip label {
+  color: #caa88b;
   padding: 5px;
-  font-size: 13px;
+  font-size: 20;
 }
